Centralized mapping logic